--- a/package.json
+++ b/package.json
@@ -8,6 +8,6 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "@google/generative-ai": "0.11.1"
+    "@google/generative-ai": "latest"
   }
 }
